<resources>
    <string name="app_name" translatable="false">Agendamento Salão de Beleza</string>

    <string name="text_full_name">Nome Completo</string>
    <string name="text_email">E-mail</string>
    <string name="text_email_hint">algumacoisa@example.com</string>
    <string name="text_password">Senha</string>
    <string name="text_password_confirm">Confirme a senha</string>
    <string name="text_password_hint">******</string>
    <string name="text_register_account">Criar conta</string>
    <string name="error_generic">Ocorreu um erro, por favor tente novamente mais tarde.</string>
    <string name="text_button_confirm">Confirmar</string>
    <string name="text_task_delete_sucess">Tarefa removida com sucesso.</string>
    <string name="text_task_update_sucess">Tarefa atualizada com sucesso.</string>
    <string name="title_activity_form_login">FormLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_tipo_cliente">Perfil Usuário</string>

    <!--    Login Fragment-->
    <string name="text_btn_login_fragment">Login</string>
    <string name="text_recover_login_fragment">Recuperar conta</string>
    <string name="text_password_empty_login_fragment">Informe sua senha.</string>
    <string name="text_email_empty_login_fragment">Informe seu e-mail.</string>

    <!--    Register Fragment-->
    <string name="text_password_empty_register_fragment">Informe sua senha.</string>
    <string name="text_email_empty_register_fragment">Informe seu e-mail.</string>

    <!--    Recover Account Fragment-->
    <string name="text_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_btn_recover_account_fragment">Enviar</string>
    <string name="text_email_empty_recover_account_fragment">Informe seu e-mail.</string>
    <string name="text_email_send_sucess_recover_account_fragment">Pronto, acabamos de enviar um link para seu e-mail.</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="conforme_biblioteca">Conforme biblioteca</string>
</resources>