<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    android:fillViewport="true"
    tools:context=".login.CadastroConta"
    android:id="@+id/cadastro_conta"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_back">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_register_account" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <TextView
                android:id="@+id/nomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_full_name"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtNomeCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/text_full_name"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:inputType="text"
                android:maxLines="1"
                android:padding="14dp"
                android:textSize="14sp"
                android:importantForAutofill="yes"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/text_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:padding="14dp"
                android:textSize="14sp"/>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:text="@string/text_password"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/edtPassword"
                app:layout_constraintStart_toStartOf="@+id/edtPassword"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:hint="@string/text_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:padding="14dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_tipo_cliente"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/tipo_cliente"
                app:layout_constraintStart_toStartOf="@+id/edtPassword"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <RadioGroup
                android:id="@+id/tipo_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="Cliente"
                    android:textColorHighlight="#D54949"
                    android:textColorLink="#35689F" />

                <RadioButton
                    android:id="@+id/empresa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="Empresa"
                    android:textColorHighlight="#D54949"
                    android:textColorLink="#35689F" />

            </RadioGroup>

            <TextView
                android:id="@+id/text_view_unidade_conta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Unidade do Salão"
                android:textColor="@color/black"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/edt_unidade_salao_conta"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edit"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="14sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_button"
                android:text="Cadastrar"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                android:textColor="@color/black"/>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminateTint="@color/color_default"
                android:visibility="invisible"
                android:layout_gravity="center_horizontal"
                tools:visibility="visible" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>